--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ serde_json = "1.0"
 env_logger = "0.10"
 ariadne = { version = "0.3", features = ["auto-color"] }
 clap = { version = "4.4", features = ["derive"] }
+termtree = "0.4"
