--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,26 +5,23 @@ license = "MIT"
 description = "A compiler for the LMNtal language"
 readme = "README.md"
 repository = "https://gitlab.ueda.info.waseda.ac.jp/wang/lmntalc"
-version = "0.6.3"
+version = "0.7.0"
 edition = "2021"
 
 [lib]
 name = "lmntalc"
 path = "src/lib.rs"
 
-[features]
-default = []
-ariadne = ["dep:ariadne"]
-
 [[bin]]
 name = "lmntalc"
 path = "src/main.rs"
 doc = false
-required-features = ["ariadne"]
 
 [dependencies]
+ariadne = { version = "0.3", features = ["auto-color"] }
 serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-ariadne = { version = "0.3", features = ["auto-color"], optional = true}
 clap = { version = "4.4", features = ["derive"] }
+owo-colors = "4"
+petgraph = { version = "0.6", features = ["serde-1"] }
+serde_json = "1.0"
 termtree = "0.4"
