--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ license = "MIT"
 description = "A compiler for the LMNtal language"
 readme = "README.md"
 repository = "https://gitlab.ueda.info.waseda.ac.jp/wang/lmntalc"
-version = "0.8.1"
+version = "0.9.0"
 edition = "2021"
 
 [lib]
@@ -18,9 +18,10 @@ path = "src/main.rs"
 doc = false
 
 [dependencies]
-ariadne = { version = "0.3", features = ["auto-color"] }
+ariadne = { version = "0.4", features = ["auto-color"] }
 serde = { version = "1.0", features = ["derive"] }
 clap = { version = "4.4", features = ["derive"] }
+once_cell = "1.19"
 owo-colors = "4"
 petgraph = { version = "0.6", features = ["serde-1"] }
 serde_json = "1.0"
